# OFZ_ANALYTICS

./: .gitignore  CHANGELOG.md  README.md  ofz-gui.cmd  pyproject.toml  requirements-dev.txt  requirements.txt  run-gui.ps1
docs/: index.md
prompts/: codex_modernization_prompt_v4.md  codex_period_aggregation_update.md  codex_second_modernization_prompt.md  codex_system_prompt.md  ofz_cbr_keyrate_parser_conceptual_instruction_v4.md  ofz_p2_modernization_step_by_step_v5_cost_aware.md  ofz_p2_modernization_step_by_step_v6_full.md  ofz_p2_modernization_system_prompt.md  ofz_p2_modernization_system_prompt_v3.md  ofz_p2_modernization_system_prompt_v4_cost_aware.md  ofz_p3_modernization_step_by_step.md  ofz_p3_modernization_step_by_step_v5.md  ofz_p3_modernization_step_by_step_v6_ru.md  ofz_p3_modernization_system_prompt.md  ofz_p3_modernization_system_prompt_v5.md  ofz_p3_modernization_system_prompt_v6.md
scripts/: 01_data_audit.py  02_data_cleaning.py  03_feature_engineering.py  04_kpi_map.py  05_visualization_strategy.py  06_build_charts.py  07_dashboard_exports.py  08_analytical_tables.py  09_monthly_analytics.py  10_build_monthly_charts.py  11_revenue_analytics.py  12_build_revenue_charts.py  README.md  __init__.py  anomaly_tests.py  build_semantic_model_v2.py  compare_outputs.py  config.py  console_encoding.py  generate_executive_summary.py  html_chart_qa.py  interactive_pipeline.py  palette.py  period_filter.py  quality_gate.py  raw_data_registry.py  regression_tests.py  report_params.py  run_manifest.py  run_pipeline.py  scatter_chart_policy.py  schema_validation.py  (+4 more)
(+258 files in other folders)
