[build-system]
requires = ["setuptools>=80,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "ofz-analytics"
version = "0.1.0"
description = "OFZ auction analytics pipeline with report scopes, charts, QA gates, manifests, and dashboard exports."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pandas>=3.0,<4.0",
    "numpy>=2.4,<3.0",
    "openpyxl>=3.1,<4.0",
    "plotly>=6.7,<7.0",
    "kaleido>=1.3,<2.0",
]

[project.optional-dependencies]
dev = [
    "setuptools>=80,<81",
]

[project.scripts]
ofz-run = "scripts.run_pipeline:main"
ofz-interactive = "scripts.interactive_pipeline:main"
ofz-quality = "scripts.quality_gate:main"
ofz-clean-outputs = "scripts.maintenance.cleanup_outputs:main"
ofz-schema = "scripts.schema_validation:main"
ofz-build-release-bundle = "scripts.maintenance.build_release_bundle:main"

[tool.setuptools.packages.find]
include = ["scripts", "scripts.*"]
